--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-parallax-tilt": "^1.7.269",
     "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.5",
     "tsparticles": "^3.7.1",
     "typewriter-effect": "^2.21.0"
   },
